crud list table width & height fixed, overflow-y rule added to list. Additional minor style changes

--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 body {
 	font-family: 'Ubuntu', sans-serif, calibri, monospace;
 	background-color: #282828;
-	font-size: 14px;
+	font-size: 15px;
 	line-height: 20px;
 }
 
@@ -183,10 +183,16 @@ section#col-1 {
 }
 
 #crud-table {
-	width: 200px;
-	overflow: auto;
+	display: block;
+	width: 100%;
+	height: 100%;
+	overflow-y: scroll;
 	border: 1px solid #eee;
 	float: left;
+}
+
+#crud-table td {
+	width: 219px;
 }
 
 #contact ul {
